[gd_scene load_steps=5 format=3 uid="uid://rnutankl4tao"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Cutscenes/Specific Cutscene/rgt_def_outro.gd" id="1_rms58"]
[ext_resource type="PackedScene" uid="uid://dr6fmxbctycup" path="res://RDE_Scenes/Cutscenes/textbox.tscn" id="2_4f121"]
[ext_resource type="Texture2D" uid="uid://0hgp27qde0sh" path="res://RDE_Images/oswald1.png" id="3_8x0mn"]
[ext_resource type="Texture2D" uid="uid://dq1u0bk36p7ji" path="res://RDE_Images/rt_ringtail3.png" id="4_qikk6"]

[node name="RGT_DEF_OUTRO" type="Node2D" node_paths=PackedStringArray("textbox_scene")]
script = ExtResource("1_rms58")
end_index = 30
textbox_scene = NodePath("Textbox")

[node name="ControlContainer" type="CanvasLayer" parent="."]

[node name="BlackOverlay" type="ColorRect" parent="ControlContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="WhiteOverlay" type="ColorRect" parent="ControlContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Textbox" parent="." instance=ExtResource("2_4f121")]

[node name="ActorContainer" type="Node" parent="."]

[node name="Oswald" type="Sprite2D" parent="ActorContainer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(620, 340)
rotation = -1.5708
texture = ExtResource("3_8x0mn")

[node name="Ringtail" type="Sprite2D" parent="ActorContainer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(620, 340)
texture = ExtResource("4_qikk6")
flip_v = true
